--- a/cwstyles.css
+++ b/cwstyles.css
@@ -1,15 +1,12 @@
 * {
     box-sizing: border-box;
-    margin-top: 0 ;
-    margin-left: 0;
-    margin-right: 0;
 }
 
 p {
     margin-top: 0;
 }
 
-.body {
+body {
     margin: 0;
     background: #F8F8F8;
 }
